@@ -214,11 +214,16 @@ config SCHED_ATEXIT
 config SCHED_ATEXIT_MAX
 	int "Max number of atexit() functions"
 	default 1
-	depends on SCHED_ATEXIT
+	depends on SCHED_ATEXIT && !SCHED_ONEXIT
 	---help---
 		By default if SCHED_ATEXIT is selected, only a single atexit() function
 		is supported. That number can be increased by defined this setting to
 		the number that you require.
+
+		If both SCHED_ONEXIT and SCHED_ATEXIT are selected, then atexit() is built
+		on top of the on_exit() implementation.  In that case, SCHED_ONEXIT_MAX
+		determines the size of the combined number of atexit(0) and on_exit calls
+		and SCHED_ATEXIT_MAX is not used.
 
 config SCHED_ONEXIT
 	bool "Enable on_exit() API"
@@ -234,6 +239,10 @@ config SCHED_ONEXIT_MAX
 		By default if SCHED_ONEXIT is selected, only a single on_exit() function
 		is supported. That number can be increased by defined this setting to the
 		number that you require.
+
+		If both SCHED_ONEXIT and SCHED_ATEXIT are selected, then atexit() is built
+		on top of the on_exit() implementation.  In that case, SCHED_ONEXIT_MAX
+		determines the size of the combined number of atexit(0) and on_exit calls.
 
 config USER_ENTRYPOINT
 	string "Application entry point"
